--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#purchaseForm {
+  margin: 5em;
+  padding: 5em;
+}
